tests/snapshots/integration__integration_tests__merge__merge_pre_squash_command_success.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--yes"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36m◎[39m [36mRunning pre-commit project hook:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Pre-commit check passed'[0m[2m
[0mPre-commit check passed
[36m◎[39m [36mMerging 1 commit to [1mmain[22m @ [2mef627f5[22m (no commit/squash/rebase needed)[39m
[107m [0m * [33mef627f5[m Add feature file
[107m [0m  feature.txt | 1 [32m+[m
[107m [0m  1 file changed, 1 insertion(+)
[32m✓[39m [32mMerged to [1mmain[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
[36m◎ Removing [1mfeature[22m worktree & branch in background (same commit as [1mmain[22m,[39m [2m_[22m[36m)[39m
[2m○[22m Switched to worktree for [1mmain[22m @ [1m_REPO_[22m
